Some refactoring and fix some errors

--- a/GRA/index.html
+++ b/GRA/index.html
@@ -2,7 +2,7 @@
   <head> 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" /> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" /> 
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container"> 
@@ -19,7 +19,7 @@
     </div>
     <div id="js-playerPickElement" class="container"> 
        <div class="row text-center"> 
-         <butto id="js-playerPick_rock" class="btn"> 
+         <button id="js-playerPick_rock" class="btn"> 
            <span class="badge"> <i class="fa fa-hand-rock-o" aria-hidden="true"></i> 
            </span> Kamień 
          </button> 
@@ -80,6 +80,6 @@
     </div>
   </div>
 </div>
-
+  <script src="js/scripts.js"></script>
   </body>
 </html>
